Oh shit, I fixed both errors literally minutes later
- When calling navigator.share, Files have to have a MIME type
- Oh my fucking god I forgot to add will-change: transform
- The whole image can now be seen at start. No more having to zoom out :D

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -111,14 +111,16 @@ button {
 }
 .cbox {
     position: fixed;
-    overflow: visible;
+    overflow: hidden;
     --x: 0px;
     --y: 0px;
     --scale: 1;
+    touch-action: none;
 }
 .cbox > canvas {
     transform: translate(var(--x), var(--y)) scale(var(--scale));
-    /* background-color: var(--pink-hard); */
+    transform-origin: 0 0;
+    will-change: transform;
 }
 
 .drawer {
